# py_web_HW13_part2

./: README.md  pyproject.toml  read_me.txt
hw10/: manage.py
hw10/hw10/: settings.py
hw10/quotes/: forms.py  models.py  urls.py  utils.py  views.py
hw10/quotes/migrations/: 0001_initial.py
hw10/quotes/static/quotes/: style.css
hw10/quotes/templates/quotes/: about.html  add_author.html  add_quote.html  base.html  index.html  view_quote.html
hw10/quotes/templatetags/: extract.py
hw10/users/: forms.py  urls.py  views.py
hw10/users/templates/users/: login.html  logout.html  signup.html
hw10/utils/: add_quotes_to_mongo.py  authors.json  migration.py  quotes.json
