[tool.poetry]
name = "py-web-hw13-part2"
version = "0.1.0"
description = "HW13 python web DJANGO"
authors = ["Artem Dorofeev <130536391+artem-dorofeev@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
pymongo = "^4.6.1"
psycopg2 = "^2.9.9"
mongoengine = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
